--- a/app/index.html
+++ b/app/index.html
@@ -383,8 +383,11 @@
                 </h4>
                 <span class="product-list__description">Гироскутер</span>
                 <div class="product-wrapper d-flex">
-                  <button class="button button-green">Заказать</button>
-                  <span class="product-list__price">13 800 руб.</span>
+                  <button class="button button-green old">Заказать</button>
+                  <div class="price-wrap">
+                    <span class="product-list__old">22 400 руб.</span>
+                    <span class="product-list__price">13 800 руб.</span>
+                  </div>
                 </div>
               </li>
               <li class="product-list__item">
